welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:45: error: expected class or object definition
return false
^Program:46: error: Unmatched closing brace '}' ignored here
} 
^Program:48: error: eof expected but '}' found.
}
^